--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,12 @@
-
+appdirs==1.4.4
+distlib==0.3.1
+filelock==3.0.12
+six==1.16.0
+virtualenv==20.4.6
+Click==7.0
 Flask==1.1.2
-Flask-Cors==3.0.9
-requests==2.23.0
-jsonschema==3.2.0
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+Werkzeug==0.15.6
