--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,8 @@ itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
 Werkzeug==0.15.6
+validate_email==1.3
+nose==1.3.7
+requests==2.21.0
+argparse==1.4.0
+uuid==1.30
