--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,28 @@
-appdirs==1.4.4
-distlib==0.3.1
-filelock==3.0.12
-six==1.16.0
-virtualenv==20.4.6
+asgiref==3.2.3
+autopep8==1.5.4
+certifi==2019.6.16
+chardet==3.0.4
 Click==7.0
+Django==3.0.3
 Flask==1.1.2
-gunicorn==19.9.0
+gunicorn==20.0.4
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
-Werkzeug==0.15.6
-validate_email==1.3
-nose==1.3.7
-requests==2.21.0
-argparse==1.4.0
-uuid==1.30
+oauthlib==3.1.0
+pycodestyle==2.6.0
+pygame==2.0.1
+PyJWT==1.7.1
+PySocks==1.7.0
+pytz==2019.2
+requests==2.22.0
+requests-oauthlib==1.3.0
+six==1.12.0
+sqlparse==0.3.0
+toml==0.10.1
+tweepy==3.9.0
+twilio==6.57.0
+urllib3==1.25.3
+virtualenv==16.7.9
+Werkzeug==0.15.5
