--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python3 -m pip install --upgrade pip
+        pip3 install -r requirements.txt
         
     - name: Linter
       run: |
@@ -34,4 +34,4 @@ jobs:
         pylint tests/
     - name: Run Tests
       run: |
-        python -m pytest
+        python3 testing/test.py
