--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -34,4 +34,4 @@ jobs:
         pylint tests/
     - name: Run Unit Tests
       run: |
-        python3 -m unittest testing/test_api.py
+        python3 -m unittest tests/test_api.py
